Fix hamburger menu animation on mobile

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -16,14 +16,9 @@ body {
     font-weight: 400;
 }
 
-header {
-    position: sticky;
-    top: 0;
-}
-
 nav {
     display: flex;
-    position: absolute;
+    position: fixed;
     text-align: center;
     width: 100%;
     height: 75px;
@@ -105,11 +100,10 @@ li.fade {
 /* nav styles start */
 
 @media screen and (min-width: 950px) {
-    
+        
     nav {
         display: grid;
         grid-template-columns: 1fr auto 1fr minmax(0, 5fr) 1fr;
-        position: fixed;
     }
 
     .logo {
